<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:gravity="center"
        android:text="@string/tv1"
        android:textSize="50dp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/pll"
        android:layout_width="match_parent"
        android:layout_height="335dp"

        android:layout_below="@id/tv1"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll1"

            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b7"

                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b4"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"

                android:text="@string/b1"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/bdot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/bdot"
                android:textAppearance="?android:textAppearanceLarge" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b8"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b5"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b2"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/b0"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b0"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/b9"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b9"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b6"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/b3"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/bequal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/beq"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/bdel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/op_height"
                android:text="@string/bd"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/bdiv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/op_height"
                android:text="@string/bdiv"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/bmul"
                android:layout_width="match_parent"
                android:layout_height="@dimen/op_height"
                android:text="@string/bmul"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/badd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/op_height"
                android:text="@string/badd"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/bsub"
                android:layout_width="match_parent"
                android:layout_height="@dimen/op_height"
                android:text="@string/bsub"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>